feat!: changed .gitignore to include only a customised package in the venv environment, will test clean install again

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
-.venv/
+# Ignore .venv folder
+.venv/bin
+.venv/include
+.venv/lib/python3.12/site-packages/*
+
+# Keep customised packages
+!.venv/lib/python3.12/site-packages/playingcards
+!.venv/lib/python3.12/site-packages/playingcards.py-1.1.1.dist-info
+
+
