fix: cleaned up .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 .venv/bin
 .venv/include
 .venv/lib64
-.venv/pyenv.cfg
+.venv/pyvenv.cfg
 .venv/lib/python3.12/site-packages/*
 
 # Keep customised packages
