feat!: added a custom_lib folder with modified playingcards package, added docstrings to both files modified in accordance with MIT licensing

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,4 @@
 # Ignore .venv folder
 __pycache__/
 .vscode/
-.venv/bin
-.venv/include
-.venv/lib64
-.venv/pyvenv.cfg
-.venv/lib/python3.12/site-packages/*
-
-# Keep customised packages
-!.venv/lib/python3.12/site-packages/playingcards
-!.venv/lib/python3.12/site-packages/playingcards.py-1.1.1.dist-info
-
-
+.venv/
