--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ iniconfig==2.1.0
 markdown-it-py==3.0.0
 mdurl==0.1.2
 packaging==25.0
-playingcards.py==1.1.1
+playingcards.py==1.1.1 # Base package included for reference
 pluggy==1.6.0
 Pygments==2.19.1
 pytest==8.4.1
